avformat/flvdec: Support live flv / NGINX RTMP streams

Fixes Ticket3553

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>